# AgenticB

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml  non-leakage.yml
assets/branding/: README.md
charts/agentic-maas/: Chart.yaml  values.yaml
charts/agentic-maas/templates/: deployment.yaml
charts/easyshift-maas/: Chart.yaml  values.yaml
charts/easyshift-maas/templates/: deployment.yaml  service.yaml
charts/reflexflow-maas/: Chart.yaml  values.yaml
deploy/secrets/: README.md  mysql_conn.json  mysql_password.txt  mysql_root_password.txt  redis_conn.json
docs/: API.md  ARCHITECTURE.md  MIGRATION_GUIDE.md  faq.md  index.md  roadmap.md
docs/concepts/: architecture.md  glossary.md  migration-draft.md  problem-and-outcome.md  template-quality.md
docs/deployment/: docker-compose.md  helm.md  nuitka.md  security-baseline.md
docs/getting-started/: first-migration-draft.md  installation.md  overview.md  quickstart.md
docs/reference/: cli.md  error-codes.md  http-api.md  input-contracts.md  python-sdk.md  yaml-spec.md
docs/tutorials/: debugging-and-tuning.md  industrial-standard-yaml.md  integrate-existing-model.md  legacy-yaml-migration.md
scripts/: build_nuitka.sh  nuitka_api_entry.py  nuitka_cli_entry.py
src/agentic_maas/: __init__.py  cli.py  observability.py  protocols.py  types.py
src/agentic_maas/adaptation/: __init__.py  bandit.py  calibrator.py
src/agentic_maas/api/: __init__.py  app.py
src/agentic_maas/approval/: __init__.py  gateway.py
src/agentic_maas/deployment/: __init__.py  manager.py
src/agentic_maas/evaluation/: __init__.py  gate.py  replay.py
src/easyshift_maas/: __init__.py  cli.py  observability.py
tests/: test_api.py  test_approval_gateway.py  test_bandit.py  test_ingestion_registry.py  test_migration_engine.py  test_quality_gate.py
tests/contract/: test_api_contract.py  test_catalog_api_contract.py  test_repository_roundtrip.py  test_validation_error_format.py
tests/e2e/: test_full_chain.py
tests/unit/: test_agentic_workflow.py  test_catalog_loader.py  test_contracts.py  test_core_pipeline.py  test_migration_assistant.py  test_snapshot_provider.py  test_template_quality.py
tools/: sensitive_scan.py
(+64 files in other folders)
