[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "agentic-maas"
version = "0.1.0"
description = "Industrial B2B Agentic MaaS end-to-end migration framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgenticB Contributors" }]
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "tenacity>=8.2.3,<9.0.0",
  "typing-extensions>=4.9.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]
protocols = [
  "asyncua>=1.1.5,<2.0.0",
  "pymodbus>=3.6.8,<4.0.0",
  "paho-mqtt>=2.1.0,<3.0.0"
]

[project.scripts]
agentic-maas-api = "agentic_maas.api.app:run"
agentic-maas = "agentic_maas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_maas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
