[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "easyshift-maas"
version = "0.3.0"
description = "LLM-driven multi-agent migration framework for reusable prediction-optimization MaaS patterns"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EasyShift Contributors" }]
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "redis>=5.0.0,<8.0.0",
  "pymysql>=1.1.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "typing-extensions>=4.9.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]
build = [
  "nuitka>=2.5.0,<3.0.0",
]
docs = [
  "mkdocs>=1.6.0,<2.0.0",
  "mkdocs-material>=9.5.0,<10.0.0",
  "pymdown-extensions>=10.0.0,<11.0.0",
]

[project.scripts]
easyshift-maas-api = "easyshift_maas.api.app:run"
easyshift-maas = "easyshift_maas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/easyshift_maas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/contract", "tests/e2e"]
addopts = "-q"
